<resources>
    <string name="app_name">InstaSaver</string>
    <string name="hint_url">Paste Instagram post or reel link</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="disclaimer">Only download media you own or have permission to use.</string>

    <string name="download_hint_title">Paste a public Instagram post or reel link</string>

    <string name="tab_download">Download</string>
    <string name="tab_reels">Reels</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_my_reels">My Reels</string>
    <string name="tab_my_photos">My Photos</string>
    <string name="tab_delete">Delete</string>

    <string name="empty_reels">No reels yet.\nDownload one from the Download tab.</string>
    <string name="empty_photos">No photos yet.\nDownload one from the Download tab.</string>
    <string name="empty_my_reels">No reels here yet.\nSelect reels and move them to \"My Reels\".</string>
    <string name="empty_my_photos">No photos here yet.\nSelect photos and move them to \"My Photos\".</string>
    <string name="empty_delete">Delete bin is empty.\nMove items here, then delete them for good.</string>
    <string name="empty_album">No albums yet.\nSelect items in Reels or Photos and choose \"Move to album\".</string>

    <string name="albums_title">Albums (hidden)</string>
    <string name="import_from_gallery">Import from gallery</string>
    <string name="pick_title">Select from gallery</string>
    <string name="pick_done">Done</string>
    <string name="pick_empty">No media found.</string>
    <string name="new_folder">New folder</string>
    <string name="add_files">Add files</string>

    <string name="actions">Actions</string>
    <string name="viewer_close">Close</string>
    <string name="ctrl_prev">Previous reel</string>
    <string name="ctrl_back">Rewind</string>
    <string name="ctrl_play_pause">Play or pause</string>
    <string name="ctrl_forward">Forward</string>
    <string name="ctrl_next">Next reel</string>
    <string name="action_open">Open in another app</string>
    <string name="action_share">Share</string>
    <string name="action_save_gallery">Save to phone gallery</string>
    <string name="action_move">Move to album</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_move_my_reels">Move to My Reels</string>
    <string name="action_move_my_photos">Move to My Photos</string>
    <string name="action_move_delete">Move to Delete bin</string>
    <string name="action_remove_fav">Remove from this collection</string>
    <string name="action_remove_album">Remove from album</string>
    <string name="action_move_to_gallery">Move back to phone gallery</string>
    <string name="sel_to_gallery">To gallery</string>
    <string name="action_restore">Restore to library</string>

    <!-- selection mode -->
    <string name="sel_select_all">Select all</string>
    <string name="sel_cancel">Cancel</string>
    <string name="sel_to_favorite">Add to collection</string>
    <string name="sel_to_delete">Move to Delete</string>
    <string name="sel_restore">Restore</string>
    <string name="sel_delete_now">Delete</string>
    <string name="sel_share">Share</string>
    <string name="sel_move_album">Album</string>
</resources>
