<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="2dp"
    android:background="#22000000">

    <ImageView
        android:id="@+id/thumb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/import_from_gallery" />

    <ImageView
        android:id="@+id/playBadge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_play"
        android:visibility="gone"
        android:contentDescription="@string/tab_reels" />

    <View
        android:id="@+id/selectionTint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66C13584"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="top|end"
        android:layout_margin="4dp"
        android:src="@drawable/ic_check"
        android:visibility="gone"
        android:contentDescription="@string/sel_select_all" />
</FrameLayout>
